# hello-devops

./: README.md  hello.py  http_util.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker.yml  docker_build_deploy  docker_build_deploy.yml  lint.yml  release.yml
hello/: __init__.py  hello.py  http_util.py
tests/: test_hello.py  test_util.py
