[build-system]
requires = ["setuptools>=61", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-devops"
version = "0.1.0"
description = "Minimal package for CI/CD training"
authors = [
  { name="You" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3"
]
